--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 user  www-data;
-worker_processes  4;
+worker_processes  auto;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -9,7 +9,7 @@ worker_processes  4;
 
 
 events {
-    worker_connections  768;
+    worker_connections  409600;
 }
 
 # load modules compiled as Dynamic Shared Object (DSO)
