--- a/conf/hhvm/server.ini
+++ b/conf/hhvm/server.ini
@@ -11,9 +11,10 @@ hhvm.server.default_document = index.php
 hhvm.log.use_log_file = true
 hhvm.log.file = /var/log/hhvm/error.log
 hhvm.repo.central.path = /var/run/hhvm/hhvm.hhbc
-
 hhvm.log.level = Warning
 hhvm.log.always_log_unhandled_exceptions = true
+
 hhvm.mysql.typed_results = false
+hhvm.check_sym_link = 1
 hhvm.jit_enable_rename_function = true
 auto_prepend_file = /etc/hhvm/disable_functions.php
